# learn-langchain

./: demo1.py  main.py  pyproject.toml  rag1.py  rag2.py
data/: rag.txt
