[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.12",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "unstructured>=0.22.23",
]
