[project]
name = "learn-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "unstructured-inference>=1.6.10",
    "unstructured[pdf]>=0.22.23",
]
